fix: long words break i.d.modal on mobile

--- a/components/ImageDetails/imageDetails.module.css
+++ b/components/ImageDetails/imageDetails.module.css
@@ -37,7 +37,6 @@
   border-radius: 4px;
   box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%),
     0 4px 25px 0px rgb(0 0 0 / 12%), 0 8px 6px -5px rgb(0 0 0 / 20%);
-  aspect-ratio: initial;
   max-height: var(--image-container-size);
 }
 
